--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -20,6 +20,8 @@
         <item quantity="one">%1$d hatırlatma\n%2$s</item>
         <item quantity="other">%1$d anımsatıcı\n%2$s</item>
     </plurals>
+    <string name="channel_name" translatable="false">MedTimer</string>
+    <string name="channel_description" translatable="false">Notifications from MedTimer</string>
     <string name="notification_title">İlaç hatırlatıcısı</string>
     <string name="notification_content">Saat %1$s - %3$s%4$s\'den %2$s alma zamanı</string>
     <string name="notification_taken">ALINDI</string>
@@ -106,6 +108,7 @@
     <string name="cycle_reminders">Döngüsel hatırlatıcılar</string>
     <string name="weekday_limited">Bazı hafta içi günlerle sınırlıdır</string>
     <string name="reminders">Hatırlatmalar</string>
+    <string name="sort" translatable="false">Sort</string>
     <string name="filter">Filtre</string>
     <string name="seven_days">7 gün</string>
     <string name="analysis">Analiz</string>
@@ -122,4 +125,12 @@
     <string name="event_name">Etkinlik adı</string>
     <string name="edit_event">Etkinliği düzenle</string>
     <string name="show_all">Hepsini göster</string>
+    <string name="intro_welcome">MedTimer\'a hoş geldiniz!</string>
+    <string name="intro_welcome_description">MedTimer, gizliliğe odaklanan ücretsiz ve açık kaynaklı bir ilaç hatırlatma uygulamasıdır.\n\nİlaç hatırlatıcıları için bildirimleri göstermek için izin gerektirir.</string>
+    <string name="intro_medicine_description">Aldığınız ve hatırlatılmasını istediğiniz ilacı oluşturmak için \"İlaç\" sekmesini kullanın. Bir ilacı silmek için sola kaydırın.</string>
+    <string name="intro_reminder_description">Ayrıntılarını düzenlemek için bir ilaç seçin ve almanız gereken ilacın farklı dozları için hatırlatıcılar oluşturun.\n\nHatırlatıcılar, belirli bir zamanda günde bir kez görünmek kadar basit veya arka arkaya birkaç gün ve birkaç gün duraklama içeren karmaşık programlar olabilir.</string>
+    <string name="intro_notification_description">Hatırlatma zamanı geldiğinde, size bir dozu alındı olarak işaretleme (\"ALINDI\" düğmesine tıklayarak), atlama (bildirimi reddederek) veya bir süre sonra tekrar hatırlatılma (\"UYKU MODUNA AL\") seçeneği sunan bir bildirim görünecektir.</string>
+    <string name="intro_overview_description">Genel bakış ekranında, yaklaşan hatırlatıcıları ve son hatırlatma olaylarını görebilirsiniz. Hatırlatma etkinlikleri sağa kaydırılarak düzenlenebilir.\n\nAyrıca, yapılandırılmış ilaçlardan birinin veya özel bir ilacın ek dozlarını manuel olarak kaydedebilirsiniz.</string>
+    <string name="intro_analysis_description">Uygulama tüm hatırlatma etkinliklerini kaydeder. Analiz ekranında geçmiş dozlarınızı analiz edebilir ve kebap (üç nokta) menüsü aracılığıyla geçmişinizi dışa aktarabilirsiniz. İlaçlar veya hatırlatıcılar silinse veya yeniden adlandırılsa bile geçmiş kalır.</string>
+    <string name="show_intro">Uygulama tanıtımını göster</string>
 </resources>
