--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,45 +1,45 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">MedTimer</string>
     <string name="tab_settings">Impostazioni</string>
-    <string name="tab_overview">Panoramica</string>
-    <string name="tab_medicine">Medicina</string>
-    <string name="add_medicine">Aggiungere un farmaco</string>
-    <string name="medicine_name">Nome del farmaco</string>
+    <string name="tab_overview">Riepilogo</string>
+    <string name="tab_medicine">Medicinali</string>
+    <string name="add_medicine">Aggiungi un medicinale</string>
+    <string name="medicine_name">Nome del medicinale</string>
     <string name="add_reminder">Aggiungi promemoria</string>
     <string name="edit">Modifica</string>
-    <string name="delete">Cancellare</string>
+    <string name="delete">Elimina</string>
     <string name="time">Tempo</string>
     <string name="dosage">Dosaggio</string>
     <string name="yes">Sì</string>
     <string name="ok">OK</string>
-    <string name="cancel">Annullamento</string>
-    <string name="confirm">Confermare</string>
-    <string name="are_you_sure_delete_medicine">È sicuro di aver cancellato il farmaco\?</string>
+    <string name="cancel">Annulla</string>
+    <string name="confirm">Conferma</string>
+    <string name="are_you_sure_delete_medicine">Vuoi eliminare il medicinale\?</string>
     <string name="no_reminders">Nessun promemoria impostato</string>
     <plurals name="sum_reminders" tools:ignore="MissingQuantity">
-        <item quantity="one">%1$d promemoria%2$s</item>
-        <item quantity="other">%1$d promemoria%2$s</item>
+        <item quantity="one">%1$d promemoria\n%2$s</item>
+        <item quantity="other">%1$d promemoria\n%2$s</item>
     </plurals>
     <string name="channel_name" translatable="false">MedTimer</string>
     <string name="channel_description" translatable="false">Notifications from MedTimer</string>
-    <string name="notification_title">Promemoria per i farmaci</string>
-    <string name="notification_content">È %1$s - è ora di prendere %2$s di %3$s%4$s</string>
-    <string name="notification_taken">PRENDI</string>
-    <string name="taken">Compiti</string>
+    <string name="notification_title">Promemoria per i Medicinali</string>
+    <string name="notification_content">Sono le %1$s - è ora di prendere %2$s di %3$s%4$s</string>
+    <string name="notification_taken">PRESO</string>
+    <string name="taken">Preso</string>
     <string name="skipped">Saltato</string>
     <string name="reminder_event">%1$s di %2$s, %3$s</string>
     <string name="recent_events">Eventi recenti</string>
     <string name="next_reminders">Prossimi promemoria</string>
     <string name="version">Versione %s</string>
-    <string name="are_you_sure_delete_reminder">Siete sicuri di aver eliminato il promemoria\?</string>
-    <string name="clear_events">Cancella gli eventi</string>
+    <string name="are_you_sure_delete_reminder">Vuoi eliminare il promemoria\?</string>
+    <string name="clear_events">Elimina gli eventi</string>
     <string name="app_version">Versione dell\'app</string>
-    <string name="are_you_sure_delete_events">Siete sicuri di aver cancellato tutti gli eventi\?</string>
-    <string name="swipe_left">Passare il dito a sinistra</string>
-    <string name="long_press">Premere a lungo</string>
+    <string name="are_you_sure_delete_events">Vuoi eliminare tutti gli eventi\?</string>
+    <string name="swipe_left">Scorri a sinistra</string>
+    <string name="long_press">Premi a lungo</string>
     <string name="delete_items">Eliminare gli elementi</string>
-    <string name="show_notifications">Mostra notifiche</string>
-    <string name="overview_events">Panoramica degli eventi di visualizzazione</string>
+    <string name="show_notifications">Mostra le notifiche</string>
+    <string name="overview_events">Riepilogo visualizzazione eventi</string>
     <string name="four_hours">4 ore</string>
     <string name="twelve_hours">12 ore</string>
     <string name="twenty_four_hours">24 ore</string>
@@ -47,61 +47,61 @@
     <string name="three_days">3 giorni</string>
     <string name="app_url">MedTimer su GitHub</string>
     <string name="color">Colore</string>
-    <string name="select_color">Selezionare il colore</string>
+    <string name="select_color">Seleziona il colore</string>
     <string name="exact_reminders">Promemoria esatti</string>
-    <string name="change_color_toast">Si noti che le modifiche al colore hanno effetto solo nei promemoria futuri.</string>
+    <string name="change_color_toast">Tieni presente che le modifiche al colore hanno effetto solo nei promemoria futuri.</string>
     <string name="permission_not_granted">Autorizzazione non concessa</string>
     <string name="exact_reminders_summary">I promemoria sono programmati all\'ora esatta (aumenta il consumo della batteria)</string>
-    <string name="enable_alarm_dialog">Per consentire la programmazione di allarmi precisi, attivarla per MedTimer nel seguente menu</string>
-    <string name="generate_test_data">Generare dati di prova</string>
+    <string name="enable_alarm_dialog">Per consentire la programmazione di allarmi precisi, abilita questo per MedTimer nel seguente menu</string>
+    <string name="generate_test_data">Genera dati di prova</string>
     <string name="create_reminder_dosage_hint">Dosaggio per il nuovo promemoria</string>
-    <string name="notification_tone_title">Tono di notifica</string>
+    <string name="notification_tone_title">Suono di notifica</string>
     <string name="cycle_consecutive_days">Giorni attivi</string>
     <string name="days">giorni</string>
     <string name="theme">Tema</string>
     <string name="default_theme">Predefinito</string>
-    <string name="alternative">Alternativa</string>
+    <string name="alternative">Alternativo</string>
     <string name="no_instructions">nessuna istruzione</string>
     <string name="before_meal">prima del pasto</string>
     <string name="after_meal">dopo il pasto</string>
     <string name="time_before_meal">x minuti prima del pasto</string>
-    <string name="time_after">x ore dopo il farmaco y</string>
-    <string name="instruction_templates">Modelli di istruzione</string>
+    <string name="time_after">x ore dopo il medicinale y</string>
+    <string name="instruction_templates">Modelli di istruzioni</string>
     <string name="instructions_label">Istruzioni aggiuntive (ad es. prima dei pasti)</string>
-    <string name="medicine_data">Medicine data</string>
-    <string name="export_csv">Esportazione come CSV</string>
-    <string name="export_pdf">Esportazione in formato PDF</string>
-    <string name="restore">Restore</string>
+    <string name="medicine_data">Dati Medicinali</string>
+    <string name="export_csv">Esporta come CSV</string>
+    <string name="export_pdf">Esporta come PDF</string>
+    <string name="restore">Ripristina</string>
     <string name="restore_failed">Ripristino non riuscito</string>
-    <string name="backup_failed">Backup fallito</string>
-    <string name="export_failed">Esportazione fallita</string>
+    <string name="backup_failed">Backup non riuscito</string>
+    <string name="export_failed">Esportazione non riuscita</string>
     <string name="restore_successful">Ripristino riuscito</string>
-    <string name="restore_start">Questo sostituirà tutte le impostazioni dei medicinali.´Continua\?</string>
-    <string name="log_additional_dose">Registra la dose aggiuntiva</string>
-    <string name="dismiss_notification_action">Azione quando si chiude la notifica</string>
-    <string name="skip_reminder">Saltare la dose</string>
-    <string name="snooze">Snooze</string>
-    <string name="snooze_duration">Durata dello snooze</string>
+    <string name="restore_start">Questo sostituirà tutte le impostazioni dei medicinali.\n\nContinuare\?</string>
+    <string name="log_additional_dose">Registra dose aggiuntiva</string>
+    <string name="dismiss_notification_action">Azione per chiusura notifica</string>
+    <string name="skip_reminder">Salta la dose</string>
+    <string name="snooze">Sospendi</string>
+    <string name="snooze_duration">Durata della sospensione</string>
     <string name="minutes_5">5 minuti</string>
     <string name="minutes_10">10 minuti</string>
     <string name="minutes_15">15 minuti</string>
     <string name="minutes_30">30 minuti</string>
     <string name="minutes_60">60 minuti</string>
     <string name="notification_skipped">SALTATO</string>
-    <string name="notification_snooze">SNOOZE</string>
-    <string name="weekend_mode">Moda del fine settimana</string>
+    <string name="notification_snooze">SOSPENDI</string>
+    <string name="weekend_mode">Modalità fine settimana</string>
     <string name="weekend_mode_days">Giorni</string>
-    <string name="monday">Monday</string>
+    <string name="monday">Lunedì</string>
     <string name="tuesday">Martedì</string>
     <string name="wednesday">Mercoledì</string>
     <string name="thursday">Giovedì</string>
     <string name="friday">Venerdì</string>
     <string name="saturday">Sabato</string>
     <string name="sunday">Domenica</string>
-    <string name="weekend_mode_summary">Ritardare le notifiche in determinati giorni della settimana fino a una determinata ora.</string>
+    <string name="weekend_mode_summary">Ritarda le notifiche in determinati giorni della settimana fino a una determinata ora.</string>
     <string name="custom">Personalizzato…</string>
     <string name="advanced_settings">Impostazioni avanzate</string>
-    <string name="remind_on">Ricorda su</string>
+    <string name="remind_on">Ricorda</string>
     <string name="every_day">Ogni giorno</string>
     <string name="cycle_pause_days">Giorni di pausa</string>
     <string name="cycle_start_date">Avvio del primo ciclo</string>
@@ -109,28 +109,28 @@
     <string name="weekday_limited">Limitato ad alcuni giorni della settimana</string>
     <string name="reminders">Promemoria</string>
     <string name="sort" translatable="false">Sort</string>
-    <string name="filter">Filtri</string>
+    <string name="filter">Filtro</string>
     <string name="seven_days">7 giorni</string>
     <string name="analysis">Analisi</string>
-    <string name="tabular_view">Vista tabellare</string>
+    <string name="tabular_view">Vista Tabella</string>
     <string name="fourteen_days">14 giorni</string>
     <string name="thirty_days">30 giorni</string>
     <string name="total">Totale</string>
     <string name="last_n_days">Ultimi %1$d giorni</string>
     <string name="name">Nome</string>
-    <string name="event_data">Dati dell\'evento</string>
-    <string name="backup">Back-up</string>
-    <string name="restore_events_start">Questo sostituirà tutti gli eventi di promemoria.´Continua\?</string>
+    <string name="event_data">Dati Eventi</string>
+    <string name="backup">Backup</string>
+    <string name="restore_events_start">Questo sostituirà tutti gli eventi di promemoria.\n\nContinuare\?</string>
     <string name="taken_now">Preso ora</string>
     <string name="event_name">Nome dell\'evento</string>
     <string name="edit_event">Modifica evento</string>
-    <string name="show_all">Mostra tutti</string>
+    <string name="show_all">Mostra tutto</string>
     <string name="intro_welcome">Benvenuti su MedTimer!</string>
-    <string name="intro_welcome_description">MedTimer è un\'applicazione gratuita e open source per i promemoria dei farmaci, con un occhio di riguardo alla privacy.\n\nRichiede l\'autorizzazione a mostrare le notifiche per i promemoria dei farmaci.</string>
-    <string name="intro_medicine_description">Utilizzare la scheda ´Medicinali´ per creare il farmaco che si sta assumendo e che si desidera ricordare. Passare il dito verso sinistra per eliminare un farmaco.</string>
-    <string name="intro_reminder_description">Selezionare un farmaco per modificarne i dettagli e creare promemoria per le diverse dosi del farmaco da assumere. I promemoria possono essere semplici, come apparire una volta al giorno a una certa ora, o complessi, con diversi giorni di fila e diversi giorni di pausa.</string>
-    <string name="intro_notification_description">Alla scadenza di un promemoria, viene visualizzata una notifica che offre la possibilità di contrassegnare la dose come assunta (facendo clic sul pulsante \"TAKEN\"), saltata (rifiutando la notifica) o di essere nuovamente ricordati dopo un certo tempo (\"SNOOZE\").</string>
-    <string name="intro_overview_description">Nella schermata di riepilogo, è possibile vedere i prossimi promemoria e gli ultimi eventi di promemoria. Inoltre, è possibile registrare manualmente dosi aggiuntive di uno dei farmaci configurati o di uno personalizzato.</string>
-    <string name="intro_analysis_description">L\'applicazione memorizza tutti gli eventi di promemoria. È possibile analizzare le dosi passate nella schermata di analisi ed esportare la cronologia tramite il menu kebab (tre punti). La cronologia rimane anche se i farmaci o i promemoria vengono cancellati o rinominati.</string>
+    <string name="intro_welcome_description">MedTimer è un\'applicazione gratuita e open source per i promemoria dei medicinali, con particolare attenzione alla privacy.\n\nRichiede l\'autorizzazione per mostrare le notifiche dei promemoria dei medicinali.</string>
+    <string name="intro_medicine_description">Utilizza la scheda \"Medicinali\" per aggiungere il medicinale che stai assumendo e che desideri ricordare. Scorri verso sinistra per eliminare un medicinale.</string>
+    <string name="intro_reminder_description">Seleziona un medicinale per modificarne i dettagli e creare i promemoria per le diverse dosi del medicinale da assumere.\n\nI promemoria possono essere semplici, ad esempio possono apparire una volta al giorno ad una certa ora, o seguire una programmazione complessa, apparendo per diversi giorni di fila e con diversi giorni di pausa.</string>
+    <string name="intro_notification_description">Alla scadenza di un promemoria, viene visualizzata una notifica che offre la possibilità di contrassegnare la dose come assunta (facendo clic sul pulsante \"PRESO\"), saltata (eliminando la notifica) o di essere nuovamente avvisati dopo un certo tempo (\"SOSPENDI\").</string>
+    <string name="intro_overview_description">Nella schermata di Riepilogo è possibile vedere i prossimi promemoria e gli ultimi eventi di promemoria. Gli eventi di promemoria possono essere modificati facendo scorrere il dito verso destra.\n\nInoltre è possibile registrare manualmente dosi aggiuntive di uno dei medicinali configurati o di un medicinale personalizzato.</string>
+    <string name="intro_analysis_description">L\'applicazione memorizza tutti gli eventi di promemoria. Puoi analizzare le dosi passate nella schermata di Analisi ed esportare la cronologia tramite il menu kebab (tre punti). La cronologia si conserva anche se i medicinali o i promemoria vengono eliminati o rinominati.</string>
     <string name="show_intro">Mostra l\'introduzione dell\'app</string>
 </resources>
