--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,4 +133,5 @@
     <string name="intro_overview_description">On the overview screen, you can see upcoming reminders and the last reminder events. Reminder events can be edited by swiping them to the right.\n\nFurthermore, you can manually log additional doses of either one of the configured medicine or a custom one.</string>
     <string name="intro_analysis_description">The app stores all reminder events. You can analyze your past doses in the analysis screen and export your history via the kebab (three dots) menu. The history will stay even if medicines or reminders are deleted or renamed.</string>
     <string name="show_intro">Show app intro</string>
+    <string name="are_you_sure_delete_reminder_event">Are you sure to delete the reminder event?</string>
 </resources>
