--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -126,12 +126,13 @@
     <string name="event_name">Nom de l\'événement</string>
     <string name="edit_event">Modifier l\'événement</string>
     <string name="show_all">Afficher tout</string>
-    <string name="intro_welcome">Bienvenue à MedTimer !</string>
+    <string name="intro_welcome">Bienvenue à MedTimer!</string>
     <string name="intro_welcome_description">MedTimer est une application gratuite et open source de rappel de prise de médicaments qui met l\'accent sur la protection de la vie privée.\n\nIl faut une autorisation pour afficher les notifications de rappel de prise de médicaments.</string>
     <string name="intro_medicine_description">Utilisez l\'onglet \"Médicaments\" pour créer le médicament que vous prenez et dont vous voulez qu\'on vous rappelle la prise. Glissez vers la gauche pour supprimer un médicament.</string>
     <string name="intro_reminder_description">Sélectionnez un médicament pour en modifier les détails et créer des rappels pour les différentes doses du médicament que vous devez prendre.\n\nLes rappels peuvent être aussi simples que d\'apparaître une fois par jour à une certaine heure ou des programmes complexes avec plusieurs jours d\'affilée et plusieurs jours de pause.</string>
     <string name="intro_notification_description">Lorsqu\'un rappel est prévu, une notification s\'affiche et vous donne la possibilité de marquer la dose comme prise (en cliquant sur le bouton \"PRIS\"), de l\'ignorer (en rejetant la notification) ou de recevoir un nouveau rappel après un certain temps (\"RÉPÉTER\").</string>
     <string name="intro_overview_description">Sur l\'écran d\'aperçu, vous pouvez voir les rappels à venir et les derniers événements de rappel. Les événements de rappel peuvent être modifiés en les faisant glisser vers la droite. En outre, vous pouvez enregistrer manuellement des doses supplémentaires de l\'un des médicaments configurés ou d\'un médicament personnalisé.</string>
-    <string name="intro_analysis_description">L\'application enregistre tous les rappels. Vous pouvez analyser vos doses passées dans l\'écran d\'analyse et exporter votre historique via le menu kebab (trois points). L\'historique est conservé même si les médicaments ou les rappels sont supprimés ou renommés.</string>
+    <string name="intro_analysis_description">L\'application enregistre tous les événements. Vous pouvez analyser vos doses passées dans l\'écran d\'analyse et exporter votre historique via le menu kebab (trois points). L\'historique est conservé même si les médicaments ou les rappels sont supprimés ou renommés.</string>
     <string name="show_intro">Afficher l\'intro de l\'application</string>
+    <string name="are_you_sure_delete_reminder_event">Êtes-vous sûr de vouloir supprimer l\'événement?</string>
 </resources>
