Added setting for notification importance

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -20,8 +20,6 @@
         <item quantity="one">%1$d Erinnerung\n%2$s</item>
         <item quantity="other">%1$d Erinnerungen\n%2$s</item>
     </plurals>
-    <string name="channel_name" translatable="false">MedTimer</string>
-    <string name="channel_description" translatable="false">Notifications from MedTimer</string>
     <string name="notification_title">Erinnerung an ein Medikament</string>
     <string name="notification_content">Es ist %1$s Uhr - Zeit, %2$s von %3$s%4$s einzunehmen</string>
     <string name="notification_taken">EINGENOMMEN</string>
@@ -59,7 +57,7 @@
     <string name="cycle_consecutive_days">Tage aktiv</string>
     <string name="days">Tage</string>
     <string name="theme">Theme</string>
-    <string name="default_theme">Standard</string>
+    <string name="default_">Standard</string>
     <string name="alternative">Alternativ</string>
     <string name="no_instructions">kein Hinweis</string>
     <string name="before_meal">vor der Mahlzeit</string>
@@ -108,7 +106,6 @@
     <string name="cycle_reminders">Zyklische Erinnerungen</string>
     <string name="weekday_limited">Auf manche Wochentage beschränkt</string>
     <string name="reminders">Erinnerungen</string>
-    <string name="sort" translatable="false">Sort</string>
     <string name="filter">Filter</string>
     <string name="seven_days">7 Tage</string>
     <string name="analysis">Analyse</string>
@@ -126,12 +123,14 @@
     <string name="edit_event">Ereignis bearbeiten</string>
     <string name="show_all">Alle anzeigen</string>
     <string name="intro_welcome">Willkommen bei MedTimer!</string>
-    <string name="intro_welcome_description">MedTimer ist eine kostenlose und quelloffene App zur Erinnerung an die Einnahme von Medikamenten mit Schwerpunkt auf dem Datenschutz.\n\nDie App benötigt die Berechtigung zur Anzeige von Benachrichtigungen um an Medikamente zu erinnern.</string>
-    <string name="intro_medicine_description">Verwenden Sie die Registerkarte \"Medikamente\" um das Medikament zu erstellen, das Sie einnehmen und an das Sie erinnert werden möchten. Wischen Sie nach links um ein Medikament zu löschen.</string>
-    <string name="intro_reminder_description">Wählen Sie ein Medikament aus um seine Details zu bearbeiten und Erinnerungen für die verschiedenen Einnahmen des Medikaments zu erstellen, die Sie einnehmen müssen.\n\nErinnerungen können einfach einmal täglich zu einer bestimmten Zeit erinnern oder komplexe Zeitpläne mit mehreren Tagen hintereinander und mehreren Tagen Pause.</string>
+    <string name="intro_welcome_description">MedTimer ist eine kostenlose und quelloffene App zur Erinnerung an die Einnahme von Medikamenten mit Schwerpunkt auf dem Datenschutz.\n\nDie App benötigt die Berechtigung zur Anzeige von Benachrichtigungen, um an Medikamente zu erinnern.</string>
+    <string name="intro_medicine_description">Verwenden Sie die Registerkarte \"Medikamente\" um das Medikament zu erstellen, das Sie einnehmen und an das Sie erinnert werden möchten. Wischen Sie nach links, um ein Medikament zu löschen.</string>
+    <string name="intro_reminder_description">Wählen Sie ein Medikament aus, um seine Details zu bearbeiten und Erinnerungen für die verschiedenen Einnahmen des Medikaments zu erstellen, die Sie einnehmen müssen.\n\nErinnerungen können einfach einmal täglich zu einer bestimmten Zeit erinnern oder komplexe Zeitpläne mit mehreren Tagen hintereinander und mehreren Tagen Pause.</string>
     <string name="intro_notification_description">Sobald eine Erinnerung fällig ist, erscheint eine Benachrichtigung, die Ihnen die Möglichkeit gibt, eine Dosis als eingenommen zu markieren (durch Klicken auf die Schaltfläche \"EINGENOMMEN\"), zu überspringen (durch Verwerfen der Benachrichtigung) oder nach einiger Zeit erneut erinnert zu werden (\"SNOOZE\").</string>
-    <string name="intro_overview_description">Auf dem Übersichtsbildschirm können Sie anstehende Erinnerungen und die letzten Erinnerungsereignisse sehen. Erinnerungsereignisse können durch Wischen nach rechts bearbeitet werden.\n\n Darüber hinaus können Sie manuell zusätzliche Einnahmen eines der konfigurierten Medikamente oder eines benutzerdefinierten Medikaments aufzeichnen.</string>
+    <string name="intro_overview_description">Auf dem Übersichtsbildschirm können Sie anstehende Erinnerungen und die letzten Erinnerungsereignisse sehen. Erinnerungsereignisse können durch Wischen nach rechts bearbeitet und nach links gelöscht werden.\n\n Darüber hinaus können Sie manuell zusätzliche Einnahmen eines der konfigurierten Medikamente oder eines benutzerdefinierten Medikaments aufzeichnen.</string>
     <string name="intro_analysis_description">Die App speichert alle Ereignisse. Sie können Ihre vergangenen Einnahmen im Analysebildschirm analysieren und Ihren Verlauf über das Kebab-Menü (drei Punkte) exportieren. Der Verlauf bleibt erhalten, auch wenn Medikamente oder Erinnerungen gelöscht oder umbenannt werden.</string>
     <string name="show_intro">App-Intro anzeigen</string>
     <string name="are_you_sure_delete_reminder_event">Sind Sie sicher, dass Sie das Ereignis löschen wollen?</string>
+    <string name="high">Hoch</string>
+    <string name="notification_importance">Benachrichtigungspriorität</string>
 </resources>
