--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -20,8 +20,6 @@
         <item quantity="one">%1$d herinnering\n%2$s</item>
         <item quantity="other">%1$d herinneringen\n%2$s</item>
     </plurals>
-    <string name="channel_name" translatable="false">MedTimer</string>
-    <string name="channel_description" translatable="false">Notifications from MedTimer</string>
     <string name="notification_title">Herinneringen van de medicatie</string>
     <string name="notification_content">Het is %1$s - tijd om %2$s van %3$s%4$s te nemen</string>
     <string name="notification_taken">GENOMEN</string>
@@ -55,11 +53,11 @@
     <string name="enable_alarm_dialog">Om het aanmaken van exacte herinneringen in te schakelen, moet u dit toestaan in het volgende menu</string>
     <string name="generate_test_data">Testgegevens genereren</string>
     <string name="create_reminder_dosage_hint">Dosering voor nieuwe herinnering</string>
-    <string name="notification_tone_title">Waarschuwingstoon</string>
+    <string name="notification_tone_title">Meldingstoon</string>
     <string name="cycle_consecutive_days">Dagen</string>
     <string name="days">dagen</string>
     <string name="theme">Thema</string>
-    <string name="default_theme">Standaard</string>
+    <string name="default_">Standaard</string>
     <string name="alternative">Alternatief</string>
     <string name="no_instructions">geen instructies</string>
     <string name="before_meal">vóór de maaltijd</string>
@@ -108,7 +106,6 @@
     <string name="cycle_reminders">Cyclische herinneringen</string>
     <string name="weekday_limited">Beperkt tot sommige dagen van de week</string>
     <string name="reminders">Herinneringen</string>
-    <string name="sort" translatable="false">Sort</string>
     <string name="filter">Filter</string>
     <string name="seven_days">7 dagen</string>
     <string name="analysis">Analyse</string>
@@ -134,4 +131,6 @@
     <string name="intro_analysis_description">De app slaat alle herinneringsgebeurtenissen op. Je kunt je eerdere doseringen analyseren in het analysescherm en je geschiedenis exporteren via het kebabmenu (drie puntjes). De geschiedenis blijft bewaard, zelfs als medicijnen of herinneringen worden verwijderd of een andere naam krijgen.</string>
     <string name="show_intro">Toon app intro</string>
     <string name="are_you_sure_delete_reminder_event">Weet je zeker dat je het herinneringsgebeurtenis wilt verwijderen?</string>
+    <string name="high">Hoog</string>
+    <string name="notification_importance">Prioriteit melding</string>
 </resources>
