--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -20,8 +20,6 @@
         <item quantity="one">%1$d hatırlatma\n%2$s</item>
         <item quantity="other">%1$d anımsatıcı\n%2$s</item>
     </plurals>
-    <string name="channel_name" translatable="false">MedTimer</string>
-    <string name="channel_description" translatable="false">Notifications from MedTimer</string>
     <string name="notification_title">İlaç hatırlatıcısı</string>
     <string name="notification_content">Saat %1$s - %3$s%4$s\'den %2$s alma zamanı</string>
     <string name="notification_taken">ALINDI</string>
@@ -59,7 +57,7 @@
     <string name="cycle_consecutive_days">Etkin günler</string>
     <string name="days">gün</string>
     <string name="theme">Tema</string>
-    <string name="default_theme">Varsayılan</string>
+    <string name="default_">Varsayılan</string>
     <string name="alternative">Alternatif</string>
     <string name="no_instructions">talimat yok</string>
     <string name="before_meal">yemekten önce</string>
@@ -108,7 +106,6 @@
     <string name="cycle_reminders">Döngüsel hatırlatıcılar</string>
     <string name="weekday_limited">Bazı hafta içi günlerle sınırlıdır</string>
     <string name="reminders">Hatırlatmalar</string>
-    <string name="sort" translatable="false">Sort</string>
     <string name="filter">Filtre</string>
     <string name="seven_days">7 gün</string>
     <string name="analysis">Analiz</string>
@@ -134,4 +131,6 @@
     <string name="intro_analysis_description">Uygulama tüm hatırlatma etkinliklerini kaydeder. Analiz ekranında geçmiş dozlarınızı analiz edebilir ve kebap (üç nokta) menüsü aracılığıyla geçmişinizi dışa aktarabilirsiniz. İlaçlar veya hatırlatıcılar silinse veya yeniden adlandırılsa bile geçmiş kalır.</string>
     <string name="show_intro">Uygulama tanıtımını göster</string>
     <string name="are_you_sure_delete_reminder_event">Hatırlatma etkinliğini sildiğinizden emin misiniz\?</string>
+    <string name="high">Yüksek</string>
+    <string name="notification_importance">Bildirim önceliği</string>
 </resources>
