--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,7 +59,7 @@
     <string name="cycle_consecutive_days">Active days</string>
     <string name="days">days</string>
     <string name="theme">Theme</string>
-    <string name="default_theme">Default</string>
+    <string name="default_">Default</string>
     <string name="alternative">Alternative</string>
     <string name="no_instructions">no instructions</string>
     <string name="before_meal">before the meal</string>
@@ -130,8 +130,10 @@
     <string name="intro_medicine_description">Use the \"Medicine\" tab to create the medicine you are taking and want to be reminded of. Swipe left to delete a medicine.</string>
     <string name="intro_reminder_description">Select a medicine to edit its details and create reminders for the different doses of the medicine you need to take.\n\nReminders can be as simple as appearing once per day at a certain time or complex schedules with several days in a row and several days of pause.</string>
     <string name="intro_notification_description">Once a reminder is due, a notification will appear that provides you the option to mark a dose as taken (by clicking the \"TAKEN\" button), skipped (by dismissing the notification) or be reminded again after some time (\"SNOOZE\").</string>
-    <string name="intro_overview_description">On the overview screen, you can see upcoming reminders and the last reminder events. Reminder events can be edited by swiping them to the right.\n\nFurthermore, you can manually log additional doses of either one of the configured medicine or a custom one.</string>
+    <string name="intro_overview_description">On the overview screen, you can see upcoming reminders and the last reminder events. Reminder events can be edited by swiping right and deleted by swiping left.\n\nFurthermore, you can manually log additional doses of either one of the configured medicine or a custom one.</string>
     <string name="intro_analysis_description">The app stores all reminder events. You can analyze your past doses in the analysis screen and export your history via the kebab (three dots) menu. The history will stay even if medicines or reminders are deleted or renamed.</string>
     <string name="show_intro">Show app intro</string>
     <string name="are_you_sure_delete_reminder_event">Are you sure to delete the reminder event?</string>
+    <string name="high">High</string>
+    <string name="notification_importance">Notification priority</string>
 </resources>
