--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -133,4 +133,6 @@
     <string name="are_you_sure_delete_reminder_event">Hatırlatma etkinliğini sildiğinizden emin misiniz\?</string>
     <string name="high">Yüksek</string>
     <string name="notification_importance">Bildirim önceliği</string>
+    <string name="notification_settings_default">Bildirim ayarları varsayılan önceliği</string>
+    <string name="notification_settings_high">Bildirim ayarları yüksek öncelik</string>
 </resources>
