--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -135,4 +135,5 @@
     <string name="notification_importance">Prioridad de notificación</string>
     <string name="notification_settings_default">Prioridad por defecto de los ajustes de notificación</string>
     <string name="notification_settings_high">Ajustes de notificación de alta prioridad</string>
+    <string name="calendar">Calendario</string>
 </resources>
